--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,5 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-_py-xgboost-mutex=2.0=cpu_0
-absl-py=0.9.0=py37hc8dfbb8_1
-appnope=0.1.0=py37hc8dfbb8_1001
-astor=0.8.1=pyh9f0ad1d_0
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.1=py_0
-blas=1.0=mkl
-bokeh=2.1.1=py37hc8dfbb8_0
-brotlipy=0.7.0=py37h9bfed18_1000
-c-ares=1.16.1=haf1e3a3_0
-ca-certificates=2020.6.20=hecda079_0
-category_encoders=2.2.2=py_0
-cctools=949.0.1=h22b1bf0_1
-cctools_osx-64=949.0.1=h5ba7a2e_1
-certifi=2020.6.20=py37hc8dfbb8_0
-cffi=1.14.1=py37hed5b41f_0
-chardet=3.0.4=py37hc8dfbb8_1006
-clang=10.0.0=default_hf57f61e_0
-clang_osx-64=10.0.0=h05bbb7f_0
-clangxx=10.0.0=default_hf57f61e_0
-clangxx_osx-64=10.0.0=h05bbb7f_1
-click=7.1.2=pyh9f0ad1d_0
-cloudpickle=1.5.0=py_0
-compiler-rt=10.0.0=h47ead80_0
-compiler-rt_osx-64=10.0.0=hbcc88fd_0
-cryptography=3.0=py37h94e4008_0
-cycler=0.10.0=py37_0
-cytoolz=0.10.1=py37h0b31af3_0
-dask=2.22.0=py_0
-dask-core=2.22.0=py_0
-decorator=4.4.2=py_0
-distributed=2.22.0=py37hc8dfbb8_0
-enum34=1.1.10=py37hc8dfbb8_1
-featuretools=0.18.1=py_0
-freetype=2.10.2=ha233b18_0
-fsspec=0.8.0=py_0
-gast=0.4.0=pyh9f0ad1d_0
-google-pasta=0.2.0=pyh8c360ce_0
-graphviz=2.38.0=hc6cc99f_1011
-grpcio=1.30.0=py37hf940fad_0
-h5py=2.10.0=nompi_py37h106b333_102
-hdf5=1.10.5=nompi_h0cbb7df_1103
-heapdict=1.0.1=py_0
-idna=2.10=pyh9f0ad1d_0
-imagecodecs-lite=2019.12.3=py37h10e2902_1
-imageio=2.9.0=py_0
-importlib-metadata=1.7.0=py37hc8dfbb8_0
-intel-openmp=2019.4=233
-ipykernel=5.3.4=py37h43977f1_0
-ipython=7.17.0=py37hc6149b9_0
-ipython_genutils=0.2.0=py_1
-jedi=0.15.2=py37_0
-jinja2=2.11.2=pyh9f0ad1d_0
-joblib=0.16.0=py_0
-jpeg=9d=h0b31af3_0
-jupyter_client=6.1.7=py_0
-jupyter_core=4.6.3=py37hc8dfbb8_1
-keras=2.3.1=py37_0
-keras-applications=1.0.8=py_1
-keras-preprocessing=1.1.0=py_0
-kiwisolver=1.2.0=py37h04f5b5a_0
-lcms2=2.11=h174193d_0
-ld64=530=1
-ld64_osx-64=530=h3c32e8a_1
-libcxx=10.0.0=1
-libedit=3.1.20191231=h1de35cc_1
-libffi=3.3=hb1e8313_2
-libgfortran=3.0.1=h93005f0_2
-libgpuarray=0.7.6=h1de35cc_1003
-libllvm10=10.0.1=h009f743_1
-libpng=1.6.37=ha441bb4_0
-libprotobuf=3.8.0=hfbae3c0_0
-libsodium=1.0.17=h01d97ff_0
-libtiff=4.1.0=h2ae36a8_6
-libwebp-base=1.1.0=h0b31af3_3
-libxgboost=1.1.1=h4a8c4bd_0
-lightgbm=2.3.0=py37h0a44026_0
-llvm-openmp=10.0.0=h28b9765_0
-locket=0.2.0=py_2
-lz4-c=1.9.2=h4a8c4bd_1
-mako=1.1.3=pyh9f0ad1d_0
-markdown=3.2.2=py_0
-markupsafe=1.1.1=py37h9bfed18_1
-matplotlib=3.2.2=0
-matplotlib-base=3.2.2=py37h5670ca0_0
-mkl=2019.4=233
-mkl-service=2.3.0=py37hfbe908c_0
-mkl_fft=1.1.0=py37hc64f4ea_0
-mkl_random=1.1.1=py37h959d312_0
-msgpack-python=1.0.0=py37ha1cc60f_1
-ncurses=6.2=h0a44026_1
-networkx=2.4=py_1
-numpy=1.19.1=py37h3b9f5b6_0
-numpy-base=1.19.1=py37hcfb5961_0
-olefile=0.46=py_0
-openssl=1.1.1g=haf1e3a3_1
-packaging=20.4=pyh9f0ad1d_0
-pandas=1.1.0=py37hb1e8313_0
-parso=0.5.2=py_0
-partd=1.1.0=py_0
-pathlib=1.0.1=py37hc8dfbb8_2
-patsy=0.5.1=py_0
-pexpect=4.8.0=py37hc8dfbb8_1
-pickleshare=0.7.5=py37hc8dfbb8_1001
-pillow=7.2.0=py37hfd78ece_1
-pip=20.2.1=py37_0
-prompt-toolkit=3.0.6=py_0
-protobuf=3.8.0=py37h4a8c4bd_2
-psutil=5.7.2=py37h60d8a13_0
-ptyprocess=0.6.0=py_1001
-py-xgboost=1.1.1=py37hc8dfbb8_0
-pycparser=2.20=pyh9f0ad1d_2
-pygments=2.6.1=py_0
-pygpu=0.7.6=py37h10e2902_1001
-pygraphviz=1.5=py37h9bfed18_1002
-pyopenssl=19.1.0=py_1
-pyparsing=2.4.7=py_0
-pysocks=1.7.1=py37hc8dfbb8_1
-python=3.7.7=hf48f09d_4
-python-dateutil=2.8.1=py_0
-python-graphviz=0.14.1=pyh9f0ad1d_0
-python_abi=3.7=1_cp37m
-pytz=2020.1=py_0
-pywavelets=1.1.1=py37h10e2902_1
-pyyaml=5.3.1=py37h9bfed18_0
-pyzmq=18.1.1=py37h4bf09a9_0
-readline=8.0=h1de35cc_0
-requests=2.24.0=pyh9f0ad1d_0
-scikit-image=0.17.2=py37h94625e5_1
-scikit-learn=0.23.1=py37h603561c_0
-scipy=1.5.0=py37h912ce22_0
-seaborn=0.11.0=0
-seaborn-base=0.11.0=py_0
-setuptools=49.2.1=py37_0
-shap=0.35.0=py37h94625e5_0
-six=1.15.0=py_0
-sortedcontainers=2.2.2=pyh9f0ad1d_0
-sqlite=3.32.3=hffcf06c_0
-statsmodels=0.11.1=py37h9bfed18_2
-tapi=1000.10.8=h879752b_4
-tblib=1.6.0=py_0
-tensorboard=1.14.0=py37_0
-tensorflow=1.14.0=h3cdfc77_0
-tensorflow-base=1.14.0=py37hc8dfbb8_0
-tensorflow-estimator=1.14.0=py37h5ca1d4c_0
-termcolor=1.1.0=py_2
-theano=1.0.5=py37hdadc0f0_0
-threadpoolctl=2.1.0=pyh5ca1d4c_0
-tifffile=2019.7.26.2=py37_0
-tk=8.6.10=hb0a8c7a_0
-toolz=0.10.0=py_0
-tornado=6.0.4=py37h1de35cc_1
-tqdm=4.48.2=pyh9f0ad1d_0
-traitlets=4.3.3=py37hc8dfbb8_1
-tsfresh=0.18.0=py_0
-typing_extensions=3.7.4.2=py_0
-urllib3=1.25.10=py_0
-wcwidth=0.2.5=pyh9f0ad1d_1
-werkzeug=1.0.1=pyh9f0ad1d_0
-wheel=0.34.2=py37_0
-wrapt=1.12.1=py37h9bfed18_1
-xgboost=1.1.1=py37h570ac47_0
-xz=5.2.5=h1de35cc_0
-yaml=0.2.5=h0b31af3_0
-zeromq=4.3.2=h6de7cb9_2
-zict=2.0.0=py_0
-zipp=3.1.0=py_0
-zlib=1.2.11=h1de35cc_3
-zstd=1.4.5=h0384e3a_1
+numpy
+pandas
+tsfresh
+matplotlib
+category_encoders
