--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -77,6 +78,7 @@ target/
 
 # exclude data from source control by default
 /data/
+logging
 
 # Mac OS-specific storage files
 .DS_Store
